# mlops2025w_112201026

./: .gitmodules  README.md
Assignments/Assignment_3/: config.json  grid.json  params.toml  pyproject.toml  question3.py
Assignments/Assignment_4/: pyproject.toml  question2.py  question3.py  question4.py  test_question4.py
Assignments/Assignment_5/: ass_5_q_4.ipynb  pyproject.toml
Class/week-2/: add.sh
Class/week10/: mlops_wandb_monitoring_lab.ipynb  rf_model.joblib
Class/week10/wandb/: latest-run
Class/week10/wandb/run-20251028_111137-mww4o0ll/: run-mww4o0ll.wandb
Class/week10/wandb/run-20251028_111137-mww4o0ll/files/: config.yaml  wandb-metadata.json  wandb-summary.json
Class/week10/wandb/run-20251028_111149-r12b9xbo/: run-r12b9xbo.wandb
Class/week10/wandb/run-20251028_111149-r12b9xbo/files/: config.yaml  wandb-metadata.json  wandb-summary.json
Class/week10/wandb/run-20251028_111156-yi4sfvz0/: run-yi4sfvz0.wandb
Class/week10/wandb/run-20251028_111156-yi4sfvz0/files/: config.yaml  wandb-metadata.json  wandb-summary.json
Class/week3/: diff.txt  fact.sh
Class/week4/: main.py  pyproject.toml
Class/week8/: .gitignore  wandb_cloud_deploy_lab_detailed.ipynb
Class/week8/app/: main.py
Class/week8/artifacts/iris-rf:v0/: model.pkl
Class/week8/wandb/: latest-run
Class/week8/wandb/run-20251021_195716-xgfbn20t/: run-xgfbn20t.wandb
Class/week8/wandb/run-20251021_195716-xgfbn20t/files/: config.yaml  requirements.txt  wandb-metadata.json
Class/week9/: cifar100_wandb_hf.ipynb
